--- a/Transformations/filter_data.ipynb
+++ b/Transformations/filter_data.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "before_dismissed = [1104, 1119, 1134, 1149, 1155, 1158, 1186, 1188, 1258, 1292, 1322,\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -157,13 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "((257, 7200), (257, 7200))"
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,6 +175,29 @@
     "    fhr, uc, y,\n",
     "    mins_cut=mins_cut, nan_percentage_threshold=nan_percentage_threshold)\n",
     "clean_fhr.shape, clean_uc.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1025, 1026, 1027, 1029, 1030, 1031, 1033, 1034, 1037, 1039, 1041,\n       1042, 1043, 1044, 2039, 1046, 1047, 1049, 1050, 1051, 1052, 1054,\n       1056, 1057, 1058, 1059, 1062, 1063, 1065, 1068, 1069, 1071, 1072,\n       1073, 1074, 1075, 1079, 1080, 1081, 1082, 1083, 1084, 1085, 1087,\n       1088, 1089, 1090, 1091, 1093, 1095, 1099, 1100, 1101, 1104, 1105,\n       1107, 1108, 1111, 1114, 1115, 1117, 1119, 1121, 1122, 1125, 1126,\n       1128, 1130, 1131, 1133, 1134, 1137, 1138, 1140, 1145, 1146, 1149,\n       1150, 1151, 1154, 1155, 1156, 1158, 1160, 1164, 1168, 1170, 1171,\n       1173, 1174, 1175, 1178, 1181, 1184, 1186, 1187, 1188, 1194, 1196,\n       1198, 1199, 1200, 1203, 1205, 1206, 1209, 1211, 1212, 1213, 1214,\n       1215, 1216, 1217, 1219, 1220, 1222, 1227, 1228, 1231, 1232, 1233,\n       1239, 1242, 1243, 1244, 1245, 1246, 1247, 1250, 1251, 1252, 1253,\n       1254, 1255, 1257, 1258, 1259, 1260, 1261, 1262, 1265, 1266, 1267,\n       1268, 1271, 1272, 1274, 1275, 1276, 1277, 1279, 1283, 1284, 1289,\n       1290, 1291, 1292, 1296, 1297, 1298, 1300, 1302, 1304, 1306, 1307,\n       1310, 1311, 1312, 1313, 1316, 1318, 1321, 1322, 1323, 1324, 1325,\n       1327, 1329, 1330, 1333, 1335, 1336, 1338, 1347, 1348, 1351, 1353,\n       1354, 1355, 1357, 1358, 1359, 1360, 1361, 1363, 1364, 1365, 1369,\n       1371, 1374, 1375, 1376, 1377, 1383, 1384, 1386, 1388, 1390, 1391,\n       1392, 1393, 1394, 1397, 1398, 1404, 1406, 1407, 1409, 1410, 1411,\n       1414, 1417, 1419, 1422, 1424, 1425, 1431, 1433, 1434, 1437, 1441,\n       1444, 1448, 1449, 1451, 1455, 1456, 1458, 1462, 1463, 1465, 1469,\n       1470, 1474, 1475, 1477, 1478, 1479, 1480, 1481, 1482, 1483, 1488,\n       1489, 1491, 1492, 1493, 1494, 2003, 2004, 2008, 2010, 2011, 2012,\n       1501, 2013, 1503, 1505, 2019, 2020, 2021, 2022, 2024, 1001, 1002,\n       1003, 1004, 1005, 1006, 1007, 2026, 1009, 1010, 2028, 2033, 1013,\n       1014, 1015, 1016, 1017, 2035, 1019, 2036, 1021, 2046])"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(list(set(fhr.index) - set(clean_fhr.index)))"
    ],
    "metadata": {
     "collapsed": false,
