--- a/Transformations/min_periods_study.ipynb
+++ b/Transformations/min_periods_study.ipynb
@@ -554,7 +554,7 @@
     "    fig.tight_layout()\n",
     "    plt.savefig(f\"REMOVED CURVES PLOTS (NaN)/{idx}.pdf\")\n",
     "    plt.savefig(f\"REMOVED CURVES PLOTS (NaN)/{idx}.png\")\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ],
    "metadata": {
     "collapsed": false,
