--- a/Transformations/smooth_FFT.ipynb
+++ b/Transformations/smooth_FFT.ipynb
@@ -2,11 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_40232\\780544625.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      9\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mtqdm\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mnotebook\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mtqdm\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     10\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 11\u001B[1;33m \u001B[1;32mfrom\u001B[0m \u001B[0mUtils\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mfixed_values\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mcommon_functions\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpaths\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     12\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mUtils\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mtransformation_utils\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mt_utils\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     13\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mUtils\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcommon_functions\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mload_data\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'Utils'"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pylab as plt\n",
     "import numpy as np\n",
@@ -199,10 +211,7 @@
     "    break"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -325,10 +334,7 @@
     "    print(f\"Smoothed: {X_train_smoothed.shape} {X_test_smoothed.shape}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -348,10 +354,7 @@
     "print(f\"Fold: {X_train.shape} {X_test.shape}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -372,10 +375,7 @@
     "print(f\"PCA: {X_train_pca.shape} {X_test_pca.shape}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1514,10 +1514,7 @@
     "        print(f\"Internal PCA: {X_train_pca.shape} {X_test_pca.shape}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1532,10 +1529,7 @@
     "COLORS = ['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728', '#9467bd', '#8c564b', '#e377c2', '#7f7f7f', '#bcbd22', '#17becf']"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1667,10 +1661,7 @@
     "    plt.savefig(f\"{paths.PLOTS_MEMORIA_PATH}/4_1_{filter_set}_smoothed_DFT.pdf\")\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1731,7 +1722,6 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
      "is_executing": true
     }
    }
